# fast-chart

./: .conform.3146593.AGENTS.md  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TEST_CHECKLIST.md  chart.toml  openspecfig.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/: CHANGELOG.md  README.md  opencode.yaml  system-prompt.md
.opencode/agents/: context-packs.md  matrix.md  orchestration.md  subagents.md
.opencode/commands/: adapt.md  adr.md  agent.md  approve.md  backlog.md  (+15 more)
docs/: getting-started.md  migration-guide.md  pane-layout-refactor-spec.md
fast-chart/: Cargo.toml
fast-chart-app/: Cargo.toml
fast-chart-app/src/: main.rs
fast-chart-app/src/adapters/: gpu_renderer.rs  mod.rs
fast-chart-app/src/adapters/data/: mod.rs  simulated.rs
fast-chart-app/src/adapters/input/: handler.rs
fast-chart-app/src/adapters/rendering/: area_renderer.rs  area_renderer_tests.rs  bar_renderer.rs  baseline_renderer.rs  candle_renderer.rs  histogram_renderer.rs  line_renderer.rs  marker_renderer.rs  mod.rs  pipeline_utils.rs  plugin.rs  price_line_renderer.rs  text_renderer.rs  types.rs
fast-chart-app/src/adapters/rendering/shaders/: line.wgsl
fast-chart-app/src/config/: mod.rs
fast-chart-core/: Cargo.toml
fast-chart-domain/: Cargo.toml
fast-chart-domain/src/: bar.rs  crosshair.rs  drawing.rs  error.rs  indicator.rs  invalidation.rs  kinetic.rs  lib.rs  localization.rs  marker.rs  price_line.rs  price_scale.rs  scale.rs  series.rs  series_type.rs  tick.rs  viewport.rs
fast-chart-domain/src/indicators/: adx.rs  atr.rs  bollinger.rs  ema.rs  heikin_ashi.rs  macd.rs  mod.rs  renko.rs
fast-chart-examples/: Cargo.toml
fast-chart-renderer-wgpu/: Cargo.toml
fast-chart-renderer-wgpu/benches/: render_benchmarks.rs
fast-chart-renderer-wgpu/src/: backend.rs  cache.rs  lib.rs  pipeline.rs  renderer.rs  scissor.rs  types.rs  vertex_gen.rs
fast-chart-renderer-wgpu/src/renderers/: area.rs  bar.rs  baseline.rs  candle.rs  histogram.rs  line.rs  mod.rs  text.rs
fast-chart-renderer-wgpu/src/shaders/: basic.wgsl
fast-chart-renderer-wgpu/tests/: render_pipeline_integration.rs
fast-chart/src/: builder.rs  config_watcher.rs  lib.rs
fast-chart/src/animation/: mod.rs
fast-chart/src/app/: chart_controller.rs  frame_counter.rs  mod.rs  pane.rs  viewport_management.rs
fast-chart/src/app/pane/: events.rs  mod.rs
fast-chart/src/cache/: grid.rs  text.rs
fast-chart/src/input/: crosshair.rs  engine.rs  gesture.rs  keyboard.rs  mod.rs  pan.rs  zoom.rs
fast-chart/src/ports/: data_provider.rs  render.rs
fast-chart/src/render/: backend.rs  commands.rs  context.rs  coordinates.rs  drawing.rs  drawing_interaction.rs  drawing_manager.rs  indicator_renderer.rs  layers.rs  mod.rs  pipeline.rs  pixel_perfect.rs  series_renderer.rs  session.rs
fast-chart/src/series/: mod.rs  range.rs  step_line.rs  volume.rs
fast-chart/src/theme/: mod.rs
fast-chart/tests/: approx_tests.rs  input_integration.rs  integration_tests.rs  property_tests.rs
fc-animation/: Cargo.toml  README.md  api.md
fc-app/: Cargo.toml  README.md  api.md
fc-app/src/: builder.rs  config_watcher.rs  lib.rs
fc-app/src/app/: chart_controller.rs  chart_state.rs  data_polling.rs  frame_counter.rs  indicator_service.rs  layout_manager.rs  mod.rs  viewport_bounds.rs  viewport_interaction.rs  viewport_management.rs
fc-app/src/app/layout/: mod.rs
fc-app/src/app/pane/: content.rs  divider.rs  events.rs  mod.rs
fc-app/src/cache/: axis.rs  geometry.rs  grid.rs  indicator.rs  mod.rs  text.rs
fc-app/src/input/: mod.rs
fc-app/src/ports/: data_provider.rs  interaction.rs  mod.rs  render.rs
fc-app/src/render/: mod.rs
fc-app/src/series/: line_break.rs  mod.rs  point_figure.rs  range.rs  step_line.rs  volume.rs
fc-app/src/theme/: mod.rs
fc-app/tests/: approx_tests.rs  input_integration.rs  integration_tests.rs  property_tests.rs
fc-cache/: Cargo.toml  README.md  api.md
fc-core/: Cargo.toml
fc-domain/: Cargo.toml  README.md  api.md
fc-domain/src/: crosshair.rs  indicator.rs  lib.rs  marker.rs  price_line.rs  price_scale.rs  viewport.rs
fc-domain/src/drawing/: common.rs  fibonacci.rs  labels.rs  lines.rs  mod.rs  shapes.rs  tests.rs
fc-domain/src/indicators/: adx.rs  atr.rs  bollinger.rs  cci.rs  ema.rs  heikin_ashi.rs  ichimoku.rs  kagi.rs  macd.rs  parabolic_sar.rs  renko.rs  rsi.rs  sma.rs  stochastic.rs  supertrend.rs  vwap.rs  williams_r.rs
fc-drawing/: Cargo.toml  README.md  api.md
fc-drawing/src/: bounds.rs  hit.rs  impls.rs  lib.rs  trait_def.rs
fc-drawing/tests/: integration.rs
fc-examples/: Cargo.toml  README.md  api.md
fc-input/: Cargo.toml  README.md  api.md
fc-primitives/: Cargo.toml  README.md  api.md
fc-primitives/src/: bar.rs  color.rs  error.rs  invalidation.rs  kinetic.rs  lib.rs  line_style.rs  localization.rs  rect.rs  scale.rs  series.rs  series_type.rs  tick.rs
fc-render/: Cargo.toml  README.md  api.md
fc-render/src/: backend.rs  commands.rs  context.rs  coordinates.rs  dirty.rs  drawing.rs  drawing_interaction.rs  drawing_manager.rs  indicator_renderer.rs  layers.rs  lib.rs  passes.rs  pipeline.rs  pixel_perfect.rs  renderable_drawing.rs  series_renderer.rs
fc-renderer-wgpu/: Cargo.toml  README.md  api.md
fc-renderer-wgpu/benches/: render_benchmarks.rs
fc-renderer-wgpu/src/: backend.rs  cache.rs  pipeline.rs  scissor.rs  types.rs  vertex_gen.rs
fc-renderer-wgpu/src/renderers/: area.rs  bar.rs  baseline.rs  candle.rs  histogram.rs  line.rs  mod.rs  text.rs
fc-renderer-wgpu/tests/: render_pipeline_integration.rs
fc-sessions/: Cargo.toml  README.md  api.md
fc-theme/: Cargo.toml  README.md  api.md
fc-types/: Cargo.toml
fc-types/src/: bar.rs  color.rs  crosshair.rs  indicator.rs  invalidation.rs  kinetic.rs  lib.rs  marker.rs  price_line.rs  scale.rs  tick.rs  viewport.rs
fc-types/src/indicators/: cci.rs  ichimoku.rs  kagi.rs  parabolic_sar.rs  rsi.rs  sma.rs  stochastic.rs  supertrend.rs  vwap.rs  williams_r.rs
openspec/: config.yaml
(+189 files in other folders)
