[package]
name = "fast-chart-app"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-chart-domain = { path = "../fast-chart-domain" }
fast-chart-core = { path = "../fast-chart-core" }
winit = "0.30"
wgpu = "22"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6.0"
