[package]
name = "fast-chart"
version = "0.1.0"
edition = "2021"
description = "Application layer and ports for the fast-chart trading library"
license = "MIT"
repository = "https://github.com/lucasmanoguerra/fast-chart"
keywords = ["trading", "chart", "finance", "ohlc", "indicators"]
categories = ["finance", "gui", "rendering"]

[dependencies]
fast-chart-domain = { path = "../fast-chart-domain" }

[features]
default = []
serde = ["fast-chart-domain/serde"]
