[package]
name = "fast-chart"
version = "0.1.0"
edition = "2021"
description = "Application layer and ports for the fast-chart trading library"
license = "MIT"
repository = "https://github.com/lucasmanoguerra/fast-chart"
keywords = ["trading", "chart", "finance", "ohlc", "indicators"]
categories = ["finance", "gui", "rendering"]

[dependencies]
fc-types = { path = "../fc-types" }
fc-theme = { path = "../fc-theme" }
fc-cache = { path = "../fc-cache" }
fc-animation = { path = "../fc-animation" }
serde = { version = "1", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
notify = { version = "6.1", optional = true }
log = "0.4"
bitflags = "2"
smallvec = "1"
num-traits = "0.2"
toml = { version = "0.8", optional = true }

[features]
default = ["animation", "sessions"]
serde = ["dep:serde", "fc-types/serde"]
animation = []
sessions = []
parallel = ["dep:rayon"]
file-watcher = ["dep:notify", "dep:toml"]

[dev-dependencies]
approx = "0.5"
proptest = "1"
tempfile = "3"
