[package]
name = "fc-app"
version = "0.1.0"
edition = "2021"
description = "Application layer and ports for the fast-chart trading library"
license = "MIT"
repository = "https://github.com/lucasmanoguerra/fast-chart"
keywords = ["trading", "chart", "finance", "ohlc", "indicators"]
categories = ["finance", "gui", "rendering"]

[dependencies]
fc-primitives = { path = "../fc-primitives" }
fc-domain = { path = "../fc-domain" }
fc-theme = { path = "../fc-theme" }
fc-cache = { path = "../fc-cache" }
fc-animation = { path = "../fc-animation" }
fc-sessions = { path = "../fc-sessions" }
fc-input = { path = "../fc-input" }
fc-render = { path = "../fc-render" }
serde = { version = "1", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
notify = { version = "6.1", optional = true }
log = "0.4"
smallvec = "1"
num-traits = "0.2"
toml = { version = "0.8", optional = true }

[features]
default = ["animation", "sessions"]
serde = ["dep:serde", "fc-primitives/serde", "fc-domain/serde"]
animation = []
sessions = []
parallel = ["dep:rayon"]
file-watcher = ["dep:notify", "dep:toml"]

[dev-dependencies]
approx = "0.5"
proptest = "1"
tempfile = "3"
