[package]
name = "fc-domain"
version = "0.1.0"
edition = "2021"
description = "Domain types for the fast-chart trading library — indicators, price scales, crosshair, drawings, markers, and viewport"
license = "MIT"
repository = "https://github.com/lucasmanoguerra/fast-chart"
keywords = ["trading", "chart", "finance", "indicators", "domain"]
categories = ["finance", "gui"]

[features]
default = []
serde = ["dep:serde", "fc-primitives/serde"]

[dependencies]
fc-primitives = { path = "../fc-primitives" }

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true
