[package]
name = "fc-types"
version = "0.1.0"
edition = "2021"
description = "Pure domain types for the fast-chart trading library"
license = "MIT"
repository = "https://github.com/lucasmanoguerra/fast-chart"
keywords = ["trading", "chart", "finance", "ohlc", "indicators"]
categories = ["finance", "gui", "rendering"]

[dependencies]
# ZERO external dependencies — strict architectural boundary

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1"
